images extensions in caps

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 }
 
 div#v1{
-  background-image: url(../img/v1.jpg);
+  background-image: url(../img/v1.JPG);
   background-size: cover;
 }
 div#v2{
@@ -34,19 +34,19 @@ div#v2{
   background-size: cover;
 }
 div#v3{
-  background-image: url(../img/v3.jpg);
+  background-image: url(../img/v3.JPG);
   background-size: cover;
 }
 div#v4{
-  background-image: url(../img/v4.jpg);
+  background-image: url(../img/v4.JPG);
   background-size: cover;
 }
 div#h1{
-  background-image: url(../img/h1.jpg);
+  background-image: url(../img/h1.JPG);
   background-size: cover;
 }
 div#h2{
-  background-image: url(../img/h2.jpg);
+  background-image: url(../img/h2.JPG);
   background-size: cover;
 }
 div#h3{
